Correción del nombre de la base de datos.

--- a/PizzaDelivery/src/main/resources/database.properties
+++ b/PizzaDelivery/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/classicmodels?serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/pizzeria?serverTimezone=UTC
 usuario=root
 clave=naLiuS0
